improve display of curated board text on mid-size screens

--- a/client/css/home.css.less
+++ b/client/css/home.css.less
@@ -136,6 +136,14 @@
     cursor: pointer;
   }
 
+  @media (min-width: 992px) and (max-width: 1200px) {
+
+    .curated-caption span {
+      font-size: 11px;
+    }
+
+  }
+
 }
 .sign-in-or-anon {
   .modal-body {
